--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">shemajamebeli_2</string>
+    <string name="enter_anagram">Enter Anagram</string>
+    <string name="save">Save</string>
+    <string name="output">Output</string>
 </resources>
